--- a/styles.css
+++ b/styles.css
@@ -33,13 +33,16 @@ p, input, label, button {
 }
 
 .header {
+    position: fixed;
+    top: 0;
+    z-index: 999;
     display: flex;
     justify-content: space-between;
     background-color: #530000;
     width: 100%;
     height: 100px;
     border-bottom: 2px solid white;
-    z-index: 2;
+    z-index: 3;
 }
 
 .centerdiv {
@@ -145,9 +148,11 @@ p, input, label, button {
 }
 
 #contentDiv {
+    margin-top: 100px;
     background-color: #2E0505;
     width: 100%;
     height: 100%;
+    text-align: center;
 }
 
 #mainFull {
@@ -156,7 +161,6 @@ p, input, label, button {
     height: fit-content;
     display: grid;
     grid-template-columns: auto auto auto auto;
-    
 }
 
 .book {
@@ -187,7 +191,7 @@ p, input, label, button {
 
 .image {
     border-radius: 15px;
-    width: 330px;
+    width: 320px;
 }
 
 input, button {
@@ -218,6 +222,7 @@ input, button {
     height: 45px;
     border-radius: 15px;
     margin-top: 10px;
+    padding-left: 20px;
 }
 
 #cancelButton, #saveButton {
@@ -235,7 +240,18 @@ input, button {
     bottom: 3%;
 }
 
+#imageInput {
+    position: absolute;
+    width: 30px;
+    opacity: 0;
+    z-index: 999;
+    cursor: pointer;
+}
+
 #imageButton, #mangaButton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 30px;
     height: 30px;
     margin-top: 10px;
@@ -243,19 +259,22 @@ input, button {
 }
 
 .mangaDiv, .imageDiv {
+    text-align: center;
+    flex-direction: column;
+    align-items: center;
+    display: flex;
     position: absolute;
     bottom: 3%;
-    left: 13%;
+    left: 11%;
     text-align: center;
 }
 
 .mangaDiv {
-    left: 28%;
+    left: 23%;
 }
 
 #newBookPopup.show {
     visibility: visible !important;
-    position: absolute;
     background-color: #460000;
     left: 50%;
     top: 50%;
@@ -267,16 +286,22 @@ input, button {
 
 #newBookPopup {
     visibility: hidden;
-    position: absolute;
+    position: fixed;
 }
 
 
 
-#smokeBombD  {
+#smokeBomb  {
     visibility: hidden;
     z-index: 1;
     background-color: rgba(0, 0, 0, 0.8);
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
+    top: 0;
+    z-index: 2;
+}
+
+#smokeBomb.show {
+    visibility: visible;
 }
